// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute additional input parameter pass through should return the correct price for source amberdata with additional input   1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute additional input parameter pass through should return the correct price for source blocksize_capital with additional input   1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute additional input parameter pass through should return the correct price for source blocksize-capital with additional input   1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute additional input parameter pass through should return the correct price for source coinapi with additional input   1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute additional input parameter pass through should return the correct price for source coingecko with additional input   1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute additional input parameter pass through should return the correct price for source coinmarketcap with additional input   1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute additional input parameter pass through should return the correct price for source coinpaprika with additional input   1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute additional input parameter pass through should return the correct price for source coinranking with additional input   1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute additional input parameter pass through should return the correct price for source cryptocompare with additional input   1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute additional input parameter pass through should return the correct price for source kaiko with additional input   1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute additional input parameter pass through should return the correct price for source tiingo with additional input   1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute marketcap method should return the correct price for source amberdata 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute marketcap method should return the correct price for source blocksize_capital 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute marketcap method should return the correct price for source blocksize-capital 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute marketcap method should return the correct price for source coinapi 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute marketcap method should return the correct price for source coingecko 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute marketcap method should return the correct price for source coinmarketcap 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute marketcap method should return the correct price for source coinpaprika 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute marketcap method should return the correct price for source coinranking 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute marketcap method should return the correct price for source cryptocompare 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute marketcap method should return the correct price for source kaiko 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute marketcap method should return the correct price for source tiingo 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "marketCap": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute marketcap method should return the correct price using a batched request when pulling data from coin API and the quote is USD 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "USD": {
            "marketCap": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "USD": {
            "marketCap": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute price method should return the correct price for source amberdata 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute price method should return the correct price for source blocksize_capital 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute price method should return the correct price for source blocksize-capital 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute price method should return the correct price for source coinapi 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute price method should return the correct price for source coingecko 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute price method should return the correct price for source coinmarketcap 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute price method should return the correct price for source coinpaprika 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute price method should return the correct price for source coinranking 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute price method should return the correct price for source cryptocompare 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute price method should return the correct price for source kaiko 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute price method should return the correct price for source tiingo 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "EUR": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;

exports[`execute price method should return the correct price using a batched request when pulling data from coin API and the quote is USD 1`] = `
{
  "data": {
    "payload": {
      "DAI": {
        "quote": {
          "USD": {
            "price": 130.27,
          },
        },
      },
      "WBTC": {
        "quote": {
          "USD": {
            "price": 130.27,
          },
        },
      },
    },
    "result": 260.54,
    "sources": [],
  },
  "debug": undefined,
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 260.54,
  "statusCode": 200,
}
`;
